integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_verified_creators_plugin_with_signature.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
assertion_line: 574
expression: response
---
{
  "interface": "MplCoreAsset",
  "id": "4iVX1oZj6nLAMerjXFw3UeGD4QU7BEaCscsWqD3zEH37",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "D9SSaw4tz5AGpfWynYJ66jDCVNTsbLBkqT8rxQFenqj4"
  },
  "mutable": true,
  "burnt": false,
  "plugins": {
    "verified_creators": {
      "data": {
        "signatures": [
          {
            "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
            "verified": true
          }
        ]
      },
      "index": 0,
      "offset": 119,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      }
    }
  },
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [],
  "is_agent": false,
  "asset_signer": "Fj4TP1YsHyd2vByHXPx6Zxq3Jgg2S5wfGy68BrZXB1zG"
}
